scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/access-to-common-web-ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: commonui
  name: access-to-common-web-ui
  namespace: "csNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      k8s-app: common-web-ui
  policyTypes:
  - Ingress
