scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/access-to-edb-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: cpfs3
    service: edb
  name: access-to-edb-postgres
  namespace: "csNamespace"
spec:
  ingress:
  - {}
  podSelector:
    matchExpressions:
    - key: k8s.enterprisedb.io/cluster
      operator: Exists
  policyTypes:
  - Ingress
