scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/zen-access-to-audit-svc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-audit-svc
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "zen-audit"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
