scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/zen-access-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-nginx
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "ibm-nginx"
  policyTypes:
  - Ingress
  ingress:
  - {}
