scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/zen-access-to-usermgmt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-usermgmt
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "usermgmt"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: "opNamespace"
    - podSelector: {}
