scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/services/zen-allow-iam-config-job.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-iam-config-job
  namespace: "csNamespace"
  labels:
    component: cpfs3
spec:
  podSelector:
    matchLabels:
      component: "iam-config-job"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
